--- a/.pages.yml
+++ b/.pages.yml
@@ -11,7 +11,7 @@ content:
         type: date
         required: true
         options:
-          - format: MMMM DD, YYYY
+          format: MMMM DD, YYYY
   - name: posts
     label: Blog Posts
     path: _posts
