--- a/.pages.yml
+++ b/.pages.yml
@@ -62,7 +62,7 @@ content:
         type: date
         required: true
         options:
-          format: MMMM DD, YYYY
+          format: MMMM D, YYYY
       - name: body
         label: Body
         description: Usually just the change log.
