Update _data/latest_version.yml (via Pages CMS)

--- a/_data/latest_version.yml
+++ b/_data/latest_version.yml
@@ -1,7 +1,7 @@
 version: 2024.03.01
 git_tag: dosbox-x-v2024.03.01
-windows_setup_file: null
 winXP_setup_file: dosbox-x-winXP-2024.03.01-setup.exe
+win9x_file: dosbox-x-mingw-win32-lowend9x-20240301225703.zip
 macos_intel_file: dosbox-x-macosx-x86_64-20240301163105.zip
 macos_arm_file: dosbox-x-macosx-arm64-20240301150043.zip
 dos_hx_file: dosbox-x-mingw-hx-dos-20240301225703.zip
