--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@ wiki/*.css linguist-generated=true
 wiki/index.html linguist-generated=false
 wiki/guides.html linguist-generated=false
 wiki/docinfo linguist-generated=false
+doxygen linguist-generated=true
+*-compat.html linguist-generated=true
