Move El Torito base parsing to a separate C++ file. Move some built-in binaries to CPP files because including directly from a h file is rather dumb. This will require updating the Visual Studio project

--- a/src/builtin/Makefile.am
+++ b/src/builtin/Makefile.am
@@ -31,8 +31,10 @@ libbuiltin_a_SOURCES = \
 	fdisk_exe.cpp \
 	format_exe.cpp \
 	chkdsk_exe.cpp \
+	textutil.cpp \
 	sys_com.cpp \
 	28_com.cpp \
 	50_com.cpp \
-	25_com.cpp
+	25_com.cpp \
+	4dos.cpp
 
