--- a/src/builtin/Makefile.am
+++ b/src/builtin/Makefile.am
@@ -31,13 +31,13 @@ libbuiltin_a_SOURCES = \
 	fdisk_exe.cpp \
 	format_exe.cpp \
 	chkdsk_exe.cpp \
+	ne2000bin.cpp \
 	textutil.cpp \
 	emsmagic.cpp \
 	shutdown.cpp \
 	glide2x.cpp \
 	mpxplay.cpp \
 	sys_com.cpp \
-	ne2000.cpp \
 	28_com.cpp \
 	50_com.cpp \
 	25_com.cpp \
