--- a/vs/dosbox-x.vcxproj.filters
+++ b/vs/dosbox-x.vcxproj.filters
@@ -750,12 +750,6 @@
     <ClCompile Include="..\src\shell\shell_misc.cpp">
       <Filter>Sources\shell</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\hardware\esfmu\esfm.c">
-      <Filter>Sources\hardware\esfmu</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\hardware\esfmu\esfm_registers.c">
-      <Filter>Sources\hardware\esfmu</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\hardware\reSID\envelope.cpp">
       <Filter>Sources\hardware\reSID</Filter>
     </ClCompile>
@@ -1620,6 +1614,44 @@
     <ClCompile Include="..\src\hardware\imfc.cpp">
       <Filter>Sources\hardware</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\hardware\esfmu\esfm.c" />
+    <ClCompile Include="..\src\hardware\esfmu\esfm_registers.c" />
+    <ClCompile Include="..\src\builtin\4dos.cpp">
+      <Filter>Sources\builtin</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\builtin\cdplay.cpp">
+      <Filter>Sources\builtin</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\builtin\dosmid.cpp">
+      <Filter>Sources\builtin</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\builtin\emsmagic.cpp">
+      <Filter>Sources\builtin</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\builtin\eval.cpp">
+      <Filter>Sources\builtin</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\builtin\glide2x.cpp">
+      <Filter>Sources\builtin</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\builtin\mpxplay.cpp">
+      <Filter>Sources\builtin</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\builtin\shutdown.cpp">
+      <Filter>Sources\builtin</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\builtin\textutil.cpp">
+      <Filter>Sources\builtin</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\builtin\zip.cpp">
+      <Filter>Sources\builtin</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\dos\eltorito.cpp">
+      <Filter>Sources\dos</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\builtin\ne2000bin.cpp">
+      <Filter>Sources\builtin</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\aviwriter\avi.h">
@@ -1744,9 +1776,6 @@
     </ClInclude>
     <ClInclude Include="..\src\hardware\dbopl.h">
       <Filter>Sources\hardware</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\hardware\esfmu\esfm.h">
-      <Filter>Sources\hardware\esfmu</Filter>
     </ClInclude>
     <ClInclude Include="..\src\hardware\hardopl.h">
       <Filter>Sources\hardware</Filter>
@@ -2577,6 +2606,8 @@
     <ClInclude Include="..\src\cpu\dynamic_alloc_common.h">
       <Filter>Sources\cpu</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\version_string.h" />
+    <ClInclude Include="..\src\hardware\esfmu\esfm.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\src\winres.rc">
